--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -19,8 +19,25 @@
             </ul>
           </div>
         </div>
+
+        <div class="columns">
+          <div class="column">
+            <form action="/message" method="post">
+              {% csrf-field %}
+              <div class="field">
+                <label for="name" class="label">Name</label>
+                <input type="text" class="input" name="name" value="{{name}}" />
+              </div>
+              <div class="field">
+                <label for="message" class="label">Message</label>
+                <textarea name="message" class="textarea">{{message}}</textarea>
+              </div>
+              <input type="submit" class="button is-primary" value="Comment" />
+            </form>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  {% endblock %}
 </div>
+{% endblock %}
